Fixed media controls displaying as too small on Amazon Video.
Fixes #77

--- a/src/media_control_overlay.css
+++ b/src/media_control_overlay.css
@@ -2,7 +2,7 @@
 {
     position: absolute;
     background-color: black;
-    height: 18px;
+    min-height: 24px;
 
     vertical-align: middle;
     color: white;
